# mpc-wallet

./: README.md
.claude/: settings.local.json
production/: CRITICAL_ARCHITECTURE_GAP.md  Cargo.toml  FUTURE_IMPROVEMENTS.md  LASTPLANLUNCH.md  REMAINING_WORK_SUMMARY.md  TEST_PLAN_MODERN.md  addressgen.md  detailedplan.md  final_differences.md  project_proposal.md  sorunlar-var.md
production/crates/api/: Cargo.toml
production/crates/api/src/: state.rs
production/crates/api/src/handlers/: cluster.rs  dkg.rs  internal.rs  presig.rs  transactions.rs
production/crates/api/src/routes/: internal.rs  transactions.rs  wallet.rs
production/crates/bitcoin/src/: client.rs  lib.rs
production/crates/orchestrator/: Cargo.toml
production/crates/orchestrator/src/: config.rs  dkg_service.rs  error.rs  health_checker.rs  lib.rs  message_router.rs  presig_service.rs  service.rs  timeout_monitor.rs
production/crates/protocols/src/cggmp24/: keygen.rs  runner.rs
production/crates/storage/src/: etcd.rs  lib.rs  postgres.rs
production/crates/types/src/: lib.rs
production/docker/: Dockerfile.node  docker-compose.dev.yml  docker-compose.yml
production/docker/init-db/: 01_schema.sql  02_migrations.sql  03_triggers.sql  04_user_addresses.sql
production/docker/scripts/: init-db.sh
production/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
production/frontend/src/: App.tsx  index.css
production/frontend/src/api/: client.ts  index.ts
production/frontend/src/api/endpoints/: auxInfo.ts  cluster.ts  dkg.ts  presignatures.ts  transactions.ts  wallet.ts
production/frontend/src/components/auth/: RoleGuard.tsx
production/frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ConnectionStatus.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx  Toast.tsx  index.ts
production/frontend/src/components/layout/: AdminLayout.tsx  UserLayout.tsx  index.ts
production/frontend/src/hooks/: index.ts  useAuxInfo.ts  useClusterStatus.ts  useDkg.ts  useHealth.ts  usePresignatures.ts  useTransactions.ts  useWallet.ts
production/frontend/src/pages/admin/: Dashboard.tsx  Nodes.tsx  Presignatures.tsx  Setup.tsx  Transactions.tsx  Users.tsx  index.ts
production/frontend/src/pages/auth/: Login.tsx
production/frontend/src/pages/user/: Dashboard.tsx  History.tsx  Receive.tsx  Send.tsx  index.ts
production/frontend/src/stores/: authStore.ts  uiStore.ts
production/frontend/src/types/: index.ts
production/frontend/src/utils/: formatters.ts  validators.ts
production/scripts/: schema.sql
