[workspace]
resolver = "2"

members = [
    "crates/types",
    "crates/common",
    "crates/crypto",
    "crates/storage",
    "crates/network",
    "crates/security",
    "crates/consensus",
    "crates/protocols",
    "crates/bitcoin",
    "crates/api",
    "crates/cli",
    "crates/orchestrator",
]

# Note: e2e tests are excluded from Docker build
# Run them separately with: cd e2e && cargo test

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MPC-Wallet Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
x509-parser = "0.16"
oid-registry = "0.7"
rcgen = "0.13"

# Storage
etcd-client = "0.13"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
elliptic-curve = "0.13"

# Threshold cryptography - CGGMP24 for ECDSA (SegWit)
generic-ec = { version = "0.4", features = ["serde", "curve-secp256k1"] }
cggmp24 = { version = "0.7.0-alpha.3", features = ["curve-secp256k1", "state-machine"] }
cggmp24-keygen = { version = "0.7.0-alpha.3", features = ["state-machine"] }
key-share = { version = "0.6", features = ["serde"] }
round-based = "0.4"

# Threshold cryptography - FROST for Schnorr (Taproot)
givre = { version = "0.2", features = ["cggmp21-keygen", "full-signing", "serde", "ciphersuite-bitcoin"] }

# Async utilities
futures = "0.3"
async-channel = "2.5"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
bdk = { version = "0.29", features = ["esplora-ureq"] }
hmac = "0.12"
ripemd = "0.1"
rusqlite = { version = "0.38", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
hex = "0.4"
base64 = "0.22"

# Metrics
prometheus = "0.13"

# Test dependencies
testcontainers = "0.15"

# Internal crates
threshold-types = { path = "crates/types" }
threshold-crypto = { path = "crates/crypto" }
threshold-storage = { path = "crates/storage" }
threshold-consensus = { path = "crates/consensus" }
threshold-bitcoin = { path = "crates/bitcoin" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
